...
                    onSave(urlText, loginText, passwordText)
                },
                modifier = Modifier
                    .padding(start = 16.dp)
            ) {
                Text(
                    text = "Save",
                    color = MaterialTheme.colorScheme.onBackground,
                    style = MaterialTheme.typography.labelLarge
                )
            }
        }
    }
...

@Preview
@Composable
fun EditPasswordFormPreview() {
    val record = PasswordRecord(
        id = UUID.randomUUID(),
        url = "google.com",
        username = "someStuff@gmail.com",
        password = "qwer",
    )

    EditPasswordForm(record, { _, _, _ ->})
}
